--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -33,6 +33,11 @@ a {
 .profile-icon {
   margin-left: auto; /* Pushes the profile icon to the right */
 }
+h2 {
+  color: #ffffff;
+  margin-left: 10%;
+  font-size: 40px;
+}
 header {
   position: fixed;
   top: 0;
@@ -49,4 +54,89 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Italiana", sans-serif;
+  background-color: #040d12;
+}
+* {
+  box-sizing: border-box;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  margin-top: 10%;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.scrolling-container {
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+  max-height: 300px; /* Set the maximum height of the container */
+  display: flex;
+  justify-content: center; /* Center the movie cards horizontally */
+  align-items: center; /* Center the movie cards vertically */
+}
+.movie-card {
+  display: inline-block;
+  width: 150px; /* Adjust width as needed */
+  margin-right: 25px; /* Add spacing between cards */
+  text-align: center;
+}
+
+.movie-card img {
+  width: 100%;
+  height: auto;
+}
+.movie-list {
+  width: 100%;
+  overflow-y: auto; /* Enable vertical scrolling for the entire movie list */
 }
