--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -13,10 +13,11 @@ ul {
   display: flex;
   list-style-type: none;
   padding: 0;
+  margin-left: 940px;
 }
 
 li {
-  margin-right: 20px;
+  margin-right: 40px;
 }
 
 a {
