--- a/CSS/Movies.css
+++ b/CSS/Movies.css
@@ -57,4 +57,46 @@ body {
 }
 * {
     box-sizing: border-box;
-} 
+}
+.row{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-right: 100px;
+}
+.card{
+    position: relative;
+    margin-top: 30px;
+    margin-left: 110px;
+    margin-bottom: 30px;
+}
+.card img {
+    width: 200px;
+    opacity: 1;
+    display: block;
+    transition: opacity 0.5s ease;
+    backface-visibility: hidden;
+}
+.card:hover img {
+    opacity: 0.1;
+}
+.overlay {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    transition: opacity 0.5s ease;
+    width: 200px;
+}
+.card:hover .overlay {
+    opacity: 1;
+}
+.text {
+    color: #04AA6D;
+    font-size: 20px;
+    width: 200px;
+    text-align: center;
+}
