--- a/CSS/About.css
+++ b/CSS/About.css
@@ -34,33 +34,39 @@ a {
 }
 
 h1 {
-    padding-top: 150px;
-    color: rgb(92,131,116);
-    margin-left: 10%;
-    font-size: 40px;
+  padding-top: 150px;
+  color: rgb(92, 131, 116);
+  margin-left: 10%;
+  font-size: 40px;
 }
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
-p{
-    padding-top: 20px;
-    color: #ffffff;
-    margin-left: 10%;
-    font-size: 30px;
+p {
+  padding-top: 20px;
+  color: #ffffff;
+  margin-left: 10%;
+  font-size: 30px;
 }
 main {
-    margin-top: 100px; 
+  margin-top: 100px;
 }
 body {
-    margin: 0;
-    padding: 0;
-    font-family: "Italiana", sans-serif;
-    background-color: #040d12;
+  margin: 0;
+  padding: 0;
+  font-family: "Italiana", sans-serif;
+  background-color: #040d12;
 }
 * {
-    box-sizing: border-box;
-} 
+  box-sizing: border-box;
+}
+footer {
+  background-color: #06131a;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
