--- a/CSS/Movies-Series.css
+++ b/CSS/Movies-Series.css
@@ -34,69 +34,75 @@ a {
 }
 
 h2 {
-    padding-top: 50px;
-    color: #ffffff;
-    margin-left: 10%;
-    font-size: 40px;
+  padding-top: 50px;
+  color: #ffffff;
+  margin-left: 10%;
+  font-size: 40px;
 }
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 main {
-    margin-top: 100px; 
+  margin-top: 100px;
 }
 body {
-    margin: 0;
-    padding: 0;
-    font-family: "Italiana", sans-serif;
-    background-color: #040d12;
+  margin: 0;
+  padding: 0;
+  font-family: "Italiana", sans-serif;
+  background-color: #040d12;
 }
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-.row{
+.row {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-around;
   margin-right: 100px;
 }
-.card{
-    position: relative;
-    margin-top: 30px;
-    margin-left: 110px;
-    margin-bottom: 30px;
+.card {
+  position: relative;
+  margin-top: 30px;
+  margin-left: 110px;
+  margin-bottom: 30px;
 }
 .card img {
-    width: 200px;
-    opacity: 1;
-    display: block;
-    transition: opacity 0.5s ease;
-    backface-visibility: hidden;
+  width: 200px;
+  opacity: 1;
+  display: block;
+  transition: opacity 0.5s ease;
+  backface-visibility: hidden;
 }
 .card:hover img {
-    opacity: 0.1;
+  opacity: 0.1;
 }
 .overlay {
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    transition: opacity 0.5s ease;
-    width: 200px;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  transition: opacity 0.5s ease;
+  width: 200px;
 }
 .card:hover .overlay {
-    opacity: 1;
+  opacity: 1;
 }
 .text {
-    color: #04AA6D;
-    font-size: 20px;
-    width: 200px;
-    text-align: center;
+  color: #04aa6d;
+  font-size: 20px;
+  width: 200px;
+  text-align: center;
+}
+footer {
+  background-color: #06131a;
+  color: white;
+  text-align: center;
+  padding: 10px;
 }
