--- a/CSS/Description.css
+++ b/CSS/Description.css
@@ -26,11 +26,11 @@ a {
 }
 
 .logo {
-  margin-right: auto; /* Pushes the logo to the left */
+  margin-right: auto;
 }
 
 .profile-icon {
-  margin-left: auto; /* Pushes the profile icon to the right */
+  margin-left: auto; 
 }
 
 h2 {
@@ -73,13 +73,13 @@ main {
 }
 .item-container {
   display: flex;
-  justify-content: flex-start; /* Changed from flex-end to flex-start */
+  justify-content: flex-start; 
   align-items: center;
 }
 
 .item-container img,
 .item-container iframe {
-  margin-right: 0px; /* Adjust the value as needed */
+  margin-right: 0px;
   margin-left: 70px;
 }
 p{
@@ -90,38 +90,38 @@ p{
 }
 .button {
   display: inline-block;
-  padding: 15px 30px; /* Increased padding for bigger buttons */
+  padding: 15px 30px; 
   margin: 10px;
-  background-color: transparent; /* Transparent background */
-  color: #ffffff; /* Blue text color */
-  border: 2px solid  rgb(92,131,116); /* Blue border */
-  border-radius: 8px; /* Rounded corners */
+  background-color: transparent; 
+  color: #ffffff; 
+  border: 2px solid  rgb(92,131,116); 
+  border-radius: 8px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 18px; /* Increased font size */
+  font-size: 18px; 
   font-family: "Italiana", sans-serif;
 }
 .button-container {
-  text-align: left; /* Align buttons to the right */
-  margin-right: 20px; /* Add margin to create space on the right */
+  text-align: left;
+  margin-right: 20px; 
   margin-left: 70px;
   margin-top: 40px;
 }
 .button:hover {
-  background-color: rgb(92,131,116); /* Blue background on hover */
-  color: #fff; /* White text color on hover */
+  background-color: rgb(92,131,116); 
+  color: #fff; 
 }
 .image-container {
   display: flex;
-  justify-content: flex-start; /* Align images to the right */
-  margin-left: 70px; /* Add margin to create space on the right */
-  margin-top: 30px; /* Add margin at the top */
+  justify-content: flex-start; 
+  margin-left: 70px; 
+  margin-top: 30px; 
 }
 
 .circle-image {
-  width: 100px; /* Set the width of the circle images */
-  height: 100px; /* Set the height of the circle images */
-  border-radius: 50%; /* Create a circular shape */
-  overflow: hidden; /* Hide overflow content (if any) */
-  margin-right: 10px; /* Add margin between images */
+  width: 100px;
+  height: 100px; 
+  border-radius: 50%; 
+  overflow: hidden; 
+  margin-right: 10px; 
 }
