--- a/CSS/Description.css
+++ b/CSS/Description.css
@@ -43,9 +43,13 @@ h3 {
   padding-top: 5px;
   color: rgb(92,131,116);
   margin-left: 5%;
-  font-size: 40px;
+  font-size: 50px;
   margin-top: 20px;
-
+}
+h4 {
+  padding-top: 10%;
+  color: #ffffff;
+  font-size: 40px;
 
 }
 header {
@@ -59,8 +63,8 @@ h1 {
     padding-top: 10px;
     color: rgb(92,131,116);
     margin-left: 10%;
-    font-size: 40px;
-    margin-top: 70px;
+    font-size: 60px;
+    margin-top: 170px;
 }
 body {
   margin: 0;
@@ -79,14 +83,15 @@ main {
 
 .item-container img,
 .item-container iframe {
-  margin-right: 0px;
+  margin-right: 70px;
   margin-left: 70px;
 }
 p{
   color: #ffffff;
-  margin-right: 30%;
+  margin-right: 5%;
   font-family: "Italiana", sans-serif;
-  margin-left: 30px;
+  margin-left: 5%;
+  font-size: larger;
 }
 .button {
   display: inline-block;
@@ -111,17 +116,36 @@ p{
   background-color: rgb(92,131,116); 
   color: #fff; 
 }
-.image-container {
-  display: flex;
-  justify-content: flex-start; 
-  margin-left: 70px; 
-  margin-top: 30px; 
-}
 
-.circle-image {
-  width: 100px;
-  height: 100px; 
-  border-radius: 50%; 
-  overflow: hidden; 
-  margin-right: 10px; 
+div {
+  display: inline-block;
+}
+.serv {
+  width: 20%;
+  display: inline-block;
+  margin: auto;
+  margin-top: 10px;
+  margin-right: 30px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: "Italiana", sans-serif ;
+}
+.team {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.team img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.TopCast{
+  
+  padding: 50px 75px;
+}
+.Type p{
+  font-size: x-large;
+  margin-left: 6%;
 }
